--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 server.port=8090
-spring.datasource.url=jdbc:h2:mem:student
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.javax.persistence.validation.mode=none
+
+#Uncomment the line below to switch on database logging
+spring.jpa.show-sql=true
+
+#Uncomment the lines below if running without Docker Compose
+spring.datasource.username=student-spring-user
+spring.datasource.password=student-secret
+
+spring.datasource.url=jdbc:mariadb://localhost:3307/student
