--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,21 @@
 server.port=8090
-
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.javax.persistence.validation.mode=none
 
 #Uncomment the line below to switch on database logging
 spring.jpa.show-sql=true
 
 #Uncomment the lines below if running without Docker Compose
-spring.datasource.username=student-spring-user
-spring.datasource.password=student-secret
+#spring.datasource.username=student-spring-user
+#spring.datasource.password=student-secret
 
-spring.datasource.url=jdbc:mariadb://localhost:3307/student
+#Uncomment the line below if building/running with Docker (NOT Docker Compose) and connecting to mariaDB running as another container
+#spring.datasource.url=jdbc:mariadb://172.17.0.1:3307/student
+
+#Uncomment the line below if building/running locally from the IDE (without Docker) and connecting to mariaDB running as a container
+#spring.datasource.url=jdbc:mariadb://localhost:3307/student
+
+#Uncomment the line below if building/running with Docker Compose
+spring.datasource.url=jdbc:mariadb://db:3307/student
