Implemented graduation functionality.

--- a/src/main/resources/integrations.yml
+++ b/src/main/resources/integrations.yml
@@ -2,3 +2,5 @@ student:
   create: http://localhost:8081/accounts
 course:
   enrol: http://localhost:8081/invoices
+account:
+  status: http://localhost:8081/accounts/student/
