Added integration with library service.

--- a/src/main/resources/integrations.yml
+++ b/src/main/resources/integrations.yml
@@ -7,7 +7,7 @@ finance:
   account:
     status: /accounts/student/
 
-#library:
-#  host: http://libraryapp:80
-#  student:
-#    create: /api/register
+library:
+  host: http://libraryapp:80
+  student:
+    create: /api/register
